--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Milano Stasera</title>
-  <meta name="description" content="Cosa succede vicino a te stasera? Piani semplici, economici, senza inviti. Stranieri benvenuti." />
+  <meta name="description" content="Cosa succede vicino a te stasera? Piani semplici, economici, senza inviti." />
 
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; line-height: 1.35; }
@@ -53,13 +53,13 @@
       <p class="sub">Milano • Stasera (18:00–23:00) • Piani semplici, economici, senza inviti.</p>
 
       <div class="badges">
-        <span class="badge">🟢 Stranieri benvenuti</span>
+        <span class="badge">🟢 Vicini benvenuti</span>
         <span class="badge">€0–€10</span>
         <span class="badge">Vicino a te</span>
         <span class="badge">Nessun requisito</span>
       </div>
 
-      <p class="note"><strong>Tutti iniziano da sconosciuti.</strong> Qui basta presentarsi.</p>
+      <p class="note"><strong>Tutti iniziano da sconosciuti.</strong> Qui, basta presentarsi.</p>
     </div>
   </header>
 
@@ -95,7 +95,7 @@
         <p class="title">⚽ Calcio al parco (tranquillo)</p>
         <p class="meta">19:00 • Parco Sempione • vibe “ci si trova e si gioca”</p>
         <div class="tags">
-          <span class="tag">🟢 Stranieri benvenuti</span>
+          <span class="tag">🟢 Vicini benvenuti</span>
           <span class="tag">€0</span>
           <span class="tag">Porta: niente</span>
           <span class="tag">Facile</span>
@@ -110,7 +110,7 @@
         <p class="title">♟️ Scacchi al bar (principianti ok)</p>
         <p class="meta">18:30 • Zona Isola • si chiacchiera e si gioca</p>
         <div class="tags">
-          <span class="tag">🟢 Stranieri benvenuti</span>
+          <span class="tag">🟢 Vicini benvenuti</span>
           <span class="tag">€5 max</span>
           <span class="tag">Nessun invito</span>
           <span class="tag">Indoor</span>
@@ -125,7 +125,7 @@
         <p class="title">🏃 Corsa easy + due chiacchiere</p>
         <p class="meta">20:00 • Darsena • 5–6 km, ritmo facile</p>
         <div class="tags">
-          <span class="tag">🟢 Stranieri benvenuti</span>
+          <span class="tag">🟢 Vicini benvenuti</span>
           <span class="tag">€0</span>
           <span class="tag">No attrezzatura</span>
           <span class="tag">Low pressure</span>
@@ -140,8 +140,8 @@
 
   <footer>
     <div class="wrap">
-      <p class="small"><strong>Regola V1:</strong> ogni evento deve essere economico, vicino e dichiarare chiaramente <em>“Stranieri benvenuti”</em>.</p>
-      <p class="small">Obiettivo: ridurre l’attrito tra “Sono le 18:00 e non ho piani” e uscire di casa.</p>
+      <p class="small"><strong>Regola V1:</strong> ogni evento deve essere economico, vicino e dichiarare chiaramente <em>“Vicini benvenuti”</em>.</p>
+      <p class="small">Obiettivo: ridurre l’attrito tra “Sono le 18:00 e non ho piani” e l'uscire di casa.</p>
     </div>
   </footer>
 </body>
