--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Milano Stasera</title>
-  <meta name="description" content="Cosa succede vicino a te stasera? Piani semplici, economici, senza inviti." />
+  <meta name="description" content="Cosa succede vicino a te stasera? Piani semplici, economici, senza inviti. Aperto a chi non si conosce." />
 
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; line-height: 1.35; }
@@ -53,13 +53,13 @@
       <p class="sub">Milano • Stasera (18:00–23:00) • Piani semplici, economici, senza inviti.</p>
 
       <div class="badges">
-        <span class="badge">🟢 Vicini benvenuti</span>
+        <span class="badge">🟢 Aperto a chi non si conosce</span>
         <span class="badge">€0–€10</span>
         <span class="badge">Vicino a te</span>
         <span class="badge">Nessun requisito</span>
       </div>
 
-      <p class="note"><strong>Tutti iniziano da sconosciuti.</strong> Qui, basta presentarsi.</p>
+      <p class="note"><strong>Tutti iniziano da sconosciuti.</strong> Qui basta presentarsi.</p>
     </div>
   </header>
 
@@ -85,7 +85,7 @@
         </select>
       </label>
 
-      <button type="button" title="Placeholder per la V1" onclick="alert('V1: “Crea evento” arriva dopo. Per ora stiamo validando l’idea con esempi semplici.');">
+      <button type="button" onclick="alert('V1: la creazione eventi arriva dopo. Ora stiamo validando l’idea.');">
         + Crea un evento (presto)
       </button>
     </div>
@@ -93,46 +93,46 @@
     <div class="grid">
       <article class="card">
         <p class="title">⚽ Calcio al parco (tranquillo)</p>
-        <p class="meta">19:00 • Parco Sempione • vibe “ci si trova e si gioca”</p>
+        <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p>
         <div class="tags">
-          <span class="tag">🟢 Vicini benvenuti</span>
+          <span class="tag">🟢 Aperto a chi non si conosce</span>
           <span class="tag">€0</span>
           <span class="tag">Porta: niente</span>
           <span class="tag">Facile</span>
         </div>
         <div class="cta">
-          <a class="primary" href="#" onclick="alert('V1: questo diventerà un vero pulsante “Ci vado” con contatore.'); return false;">Ci vado</a>
-          <a href="https://www.google.com/maps/search/?api=1&query=Parco%20Sempione%20Milano" target="_blank" rel="noreferrer">Apri su Maps</a>
+          <a class="primary" href="#" onclick="alert('V1: questo diventerà un vero pulsante “Ci vado”.'); return false;">Ci vado</a>
+          <a href="https://www.google.com/maps/search/?api=1&query=Parco%20Sempione%20Milano" target="_blank">Apri su Maps</a>
         </div>
       </article>
 
       <article class="card">
-        <p class="title">♟️ Scacchi al bar (principianti ok)</p>
-        <p class="meta">18:30 • Zona Isola • si chiacchiera e si gioca</p>
+        <p class="title">♟️ Scacchi al bar</p>
+        <p class="meta">18:30 • Zona Isola • principianti ok</p>
         <div class="tags">
-          <span class="tag">🟢 Vicini benvenuti</span>
+          <span class="tag">🟢 Aperto a chi non si conosce</span>
           <span class="tag">€5 max</span>
           <span class="tag">Nessun invito</span>
           <span class="tag">Indoor</span>
         </div>
         <div class="cta">
-          <a class="primary" href="#" onclick="alert('V1: questo diventerà un vero pulsante “Ci vado” con contatore.'); return false;">Ci vado</a>
-          <a href="https://www.google.com/maps/search/?api=1&query=Isola%20Milano%20bar" target="_blank" rel="noreferrer">Apri su Maps</a>
+          <a class="primary" href="#" onclick="alert('V1: questo diventerà un vero pulsante “Ci vado”.'); return false;">Ci vado</a>
+          <a href="https://www.google.com/maps/search/?api=1&query=Isola%20Milano%20bar" target="_blank">Apri su Maps</a>
         </div>
       </article>
 
       <article class="card">
         <p class="title">🏃 Corsa easy + due chiacchiere</p>
-        <p class="meta">20:00 • Darsena • 5–6 km, ritmo facile</p>
+        <p class="meta">20:00 • Darsena • 5–6 km tranquilli</p>
         <div class="tags">
-          <span class="tag">🟢 Vicini benvenuti</span>
+          <span class="tag">🟢 Aperto a chi non si conosce</span>
           <span class="tag">€0</span>
           <span class="tag">No attrezzatura</span>
-          <span class="tag">Low pressure</span>
+          <span class="tag">Zero pressione</span>
         </div>
         <div class="cta">
-          <a class="primary" href="#" onclick="alert('V1: questo diventerà un vero pulsante “Ci vado” con contatore.'); return false;">Ci vado</a>
-          <a href="https://www.google.com/maps/search/?api=1&query=Darsena%20Milano" target="_blank" rel="noreferrer">Apri su Maps</a>
+          <a class="primary" href="#" onclick="alert('V1: questo diventerà un vero pulsante “Ci vado”.'); return false;">Ci vado</a>
+          <a href="https://www.google.com/maps/search/?api=1&query=Darsena%20Milano" target="_blank">Apri su Maps</a>
         </div>
       </article>
     </div>
@@ -140,8 +140,8 @@
 
   <footer>
     <div class="wrap">
-      <p class="small"><strong>Regola V1:</strong> ogni evento deve essere economico, vicino e dichiarare chiaramente <em>“Vicini benvenuti”</em>.</p>
-      <p class="small">Obiettivo: ridurre l’attrito tra “Sono le 18:00 e non ho piani” e l'uscire di casa.</p>
+      <p class="small"><strong>Regola V1:</strong> eventi semplici, economici e dichiaratamente <em>aperti a chi non si conosce</em>.</p>
+      <p class="small">Obiettivo: ridurre l’attrito tra “sono le 18:00 e non ho piani” e uscire di casa.</p>
     </div>
   </footer>
 </body>
