--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p class="sub">Milano • Stasera (18:00–23:00) • Piani semplici, economici, senza inviti.</p>
 
       <div class="badges">
-        <span class="badge">🟢 Aperto a chi non si conosce</span>
+        <span class="badge">🟢 Vicini Benvenuti</span>
         <span class="badge">€0–€10</span>
         <span class="badge">Vicino a te</span>
         <span class="badge">Nessun requisito</span>
@@ -95,7 +95,7 @@
         <p class="title">⚽ Calcio al parco (tranquillo)</p>
         <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p>
         <div class="tags">
-          <span class="tag">🟢 Aperto a chi non si conosce</span>
+          <span class="tag">🟢 Vicini Benvenuti</span>
           <span class="tag">€0</span>
           <span class="tag">Porta: niente</span>
           <span class="tag">Facile</span>
@@ -110,7 +110,7 @@
         <p class="title">♟️ Scacchi al bar</p>
         <p class="meta">18:30 • Zona Isola • principianti ok</p>
         <div class="tags">
-          <span class="tag">🟢 Aperto a chi non si conosce</span>
+          <span class="tag">🟢 Vicini Benvenuti</span>
           <span class="tag">€5 max</span>
           <span class="tag">Nessun invito</span>
           <span class="tag">Indoor</span>
@@ -125,7 +125,7 @@
         <p class="title">🏃 Corsa easy + due chiacchiere</p>
         <p class="meta">20:00 • Darsena • 5–6 km tranquilli</p>
         <div class="tags">
-          <span class="tag">🟢 Aperto a chi non si conosce</span>
+          <span class="tag">🟢 Vicini Benvenuti</span>
           <span class="tag">€0</span>
           <span class="tag">No attrezzatura</span>
           <span class="tag">Zero pressione</span>
