--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </select>
       </label>
 
-      <button type="button" onclick="alert('V1: la creazione eventi arriva dopo. Ora stiamo validando l’idea.');">
+      <button type="button" onclick="alert('V1: la creazione eventi arriverà a breve!.');">
         + Crea un evento (presto)
       </button>
     </div>
@@ -116,6 +116,7 @@
       <article class="card">
         <p class="title">⚽ Calcio al parco (tranquillo)</p>
         <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p>
+        <p class="meta"><span class="count">3</span> persone già ci sono</p>
         <div class="tags">
           <span class="tag">🟢 Vicini Benvenuti</span>
           <span class="tag">€0</span>
@@ -132,6 +133,7 @@
       <article class="card">
         <p class="title">♟️ Scacchi al bar</p>
         <p class="meta">18:30 • Zona Isola • principianti ok</p>
+        <p class="meta"><span class="count">3</span> persone già ci sono</p>
         <div class="tags">
           <span class="tag">🟢 Vicini Benvenuti</span>
           <span class="tag">€5 max</span>
@@ -142,12 +144,12 @@
           <a class="primary attend-btn" href="#" data-count="3">Ci sono</a>
           <a href="https://www.google.com/maps/search/?api=1&query=Isola%20Milano%20bar" target="_blank">Apri su Maps</a>
         </div>
-         <p class="meta"><span class="count">3</span> persone già ci sono</p>
       </article>
 
       <article class="card">
         <p class="title">🏃 Corsa easy + due chiacchiere</p>
         <p class="meta">20:00 • Darsena • 5–6 km tranquilli</p>
+        <p class="meta"><span class="count">3</span> persone già ci sono</p>
         <div class="tags">
           <span class="tag">🟢 Vicini Benvenuti</span>
           <span class="tag">€0</span>
@@ -158,7 +160,6 @@
           <a class="primary attend-btn" href="#" data-count="3">Ci sono</a>
           <a href="https://www.google.com/maps/search/?api=1&query=Darsena%20Milano" target="_blank">Apri su Maps</a>
         </div>
-         <p class="meta"><span class="count">3</span> persone già ci sono</p>
       </article>
     </div>
   
@@ -168,6 +169,7 @@
     <div class="wrap">
       <p class="small"><strong>Regola V1:</strong> eventi semplici, economici e dichiaratamente <em>aperti a chi non si conosce</em>.</p>
       <p class="small">Obiettivo: ridurre l’attrito tra “sono le 18:00 e non ho piani” e uscire di casa.</p>
+      
     </div>
   </footer>
 </body>
