--- a/index.html
+++ b/index.html
@@ -47,19 +47,20 @@
 </head>
   
 <script>
-  document.querySelectorAll('.attend-btn').forEach(btn => {
-    btn.addEventListener('click', function (e) {
+  document.querySelectorAll('.attend-btn').forEach(button => {
+    button.addEventListener('click', function (e) {
       e.preventDefault();
 
       if (this.classList.contains('active')) return;
 
       const card = this.closest('.card');
-      const countEl = card.querySelector('.count');
+      const countSpan = card.querySelector('.count');
 
-      let count = parseInt(countEl.textContent, 10);
-      count++;
+      let count = parseInt(countSpan.textContent, 10);
+      if (isNaN(count)) count = 0;
 
-      countEl.textContent = count;
+      countSpan.textContent = count + 1;
+
       this.textContent = 'Ci sei ✔';
       this.classList.add('active');
       this.style.borderColor = '#0a7';
@@ -67,6 +68,7 @@
     });
   });
 </script>
+
 
 <body>
   <header>
@@ -112,23 +114,25 @@
       </button>
     </div>
 
-    <div class="grid">
-      <article class="card">
-        <p class="title">⚽ Calcio al parco (tranquillo)</p>
-        <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p>
-        <p class="meta"><span class="count">3</span> persone già ci sono</p>
-        <div class="tags">
-          <span class="tag">🟢 Vicini Benvenuti</span>
-          <span class="tag">€0</span>
-          <span class="tag">Porta: niente</span>
-          <span class="tag">Facile</span>
-        </div>
-        <div class="cta">
-          <a class="primary attend-btn" href="#" data-count="3">Ci sono</a>
-          <a href="https://www.google.com/maps/search/?api=1&query=Parco%20Sempione%20Milano" target="_blank">Apri su Maps</a>
-        </div>
-        <p class="meta"><span class="count">3</span> persone già ci sono</p>
-      </article>
+   <article class="card">
+  <p class="title">⚽ Calcio al parco (tranquillo)</p>
+  <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p>
+
+  <p class="meta"><span class="count">3</span> persone ci sono</p>
+
+  <div class="tags">
+    <span class="tag">🟢 Aperto a chi non si conosce</span>
+    <span class="tag">€0</span>
+    <span class="tag">Porta: niente</span>
+    <span class="tag">Facile</span>
+  </div>
+
+  <div class="cta">
+    <a class="primary attend-btn" href="#">Ci sono</a>
+    <a href="https://www.google.com/maps/search/?api=1&query=Parco%20Sempione%20Milano" target="_blank">Apri su Maps</a>
+  </div>
+</article>
+
 
       <article class="card">
         <p class="title">♟️ Scacchi al bar</p>
