--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 
    <article class="card">
   <p class="title">⚽ Calcio al parco (tranquillo)</p>
-  <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p>
-
+  <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p
   <p class="meta"><span class="count">3</span> persone ci sono</p>
 
   <div class="tags">
