--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <span class="badge">Nessun requisito</span>
       </div>
 
-      <p class="note"><strong>Tutti iniziano da sconosciuti.</strong> Qui basta presentarsi.</p>
+      <p class="note"><strong>Tutti iniziano da sconosciuti.</strong> Qui, basta presentarsi.</p>
     </div>
   </header>
 
