--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       background: white; font-size: 14px;
     }
     button { cursor: pointer; }
+    #map { height: 420px; border: 1px solid #eee; border-radius: 14px; }
+    .map-wrap { margin: 10px 0 18px; }
 
     .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 12px; }
     .card { border: 1px solid #eee; border-radius: 14px; padding: 14px; box-shadow: 0 1px 2px rgba(0,0,0,.04); }
