--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
         + Crea un evento (presto)
       </button>
     </div>
+      <div class="map-wrap">
+      <div id="map" aria-label="Mappa eventi Milano"></div>
+      <p class="small" style="margin-top:10px;color:#555;">
+        Suggerimento: tocca un pin per vedere l’evento più vicino.
+      </p>
+    </div>
 
     <section class="grid">
       <article class="card">
