--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
       <div id="map" aria-label="Mappa eventi Milano"></div>
       <p class="small hint">Suggerimento: tocca un pin per vedere l’evento più vicino.</p>
     </div>
+    
+<section class="user-events" id="userEventsSection" aria-label="Eventi creati da te" hidden>
+  <h2 class="h2">I tuoi eventi</h2>
+  <div class="grid" id="userEventsGrid"></div>
+</section>
+
+<h2 class="h2">Eventi di stasera</h2>
 
     <div class="grid">
       <article class="card" id="event-sempione" data-lat="45.4765" data-lng="9.1743" data-place="Parco Sempione"
