--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </label>
 
       <button type="button" id="createEventBtn">
-        + Crea un evento (presto)
+        + Crea un evento 
       </button>
     </div>
 
