--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stasera Milano</title>
-  <meta name="description" content="Cosa succede vicino a te stasera? Piani semplici, economici, senza inviti. Aperto a chi non si conosce." />
+  <meta name="description" content="Cosa succede vicino a te stasera? Piani semplici, economici, senza inviti. Vicini benvenuti ." />
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
@@ -30,7 +30,7 @@
       <p class="sub">Milano • Stasera (18:00–23:00) • Piani semplici, economici, senza inviti.</p>
 
       <div class="badges">
-        <span class="badge">🟢 Aperto a chi non si conosce</span>
+        <span class="badge">🟢 Vicini Benvenuti</span>
         <span class="badge">€0–€10</span>
         <span class="badge">Vicino a te</span>
         <span class="badge">Nessun requisito</span>
@@ -87,7 +87,7 @@
         <p class="meta"><span class="count">3</span> persone ci sono</p>
 
         <div class="tags">
-          <span class="tag">🟢 Aperto a chi non si conosce</span>
+          <span class="tag">🟢 Vicini benvenuti</span>
           <span class="tag">€0</span>
           <span class="tag">Porta: niente</span>
           <span class="tag">Facile</span>
@@ -106,7 +106,7 @@
         <p class="meta"><span class="count">2</span> persone ci sono</p>
 
         <div class="tags">
-          <span class="tag">🟢 Aperto a chi non si conosce</span>
+          <span class="tag">🟢 Vicini benvenuti </span>
           <span class="tag">€5 max</span>
           <span class="tag">Nessun invito</span>
           <span class="tag">Indoor</span>
@@ -125,7 +125,7 @@
         <p class="meta"><span class="count">5</span> persone ci sono</p>
 
         <div class="tags">
-          <span class="tag">🟢 Aperto a chi non si conosce</span>
+          <span class="tag">🟢 Vicini Benvenuti </span>
           <span class="tag">€0</span>
           <span class="tag">No attrezzatura</span>
           <span class="tag">Zero pressione</span>
