--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div class="controls">
       <label>
         Zona:
-        <select aria-label="Seleziona una zona">
-          <option selected>Vicino a me (in arrivo)</option>
+        <select id="areaSelect" aria-label="Seleziona una zona">
+          <option selected>Vicino a me </option>
           <option>Navigli</option>
           <option>Porta Romana</option>
           <option>Isola</option>
