--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
       <button type="button" id="createEventBtn">
         + Crea un evento 
       </button>
+      <label class="toggle">
+  <input type="checkbox" id="soloMode" />
+  Modalità SOLO
+</label>
+
+<button type="button" id="cancelCreateBtn" hidden>
+  Annulla
+</button>
+
     </div>
 
     <div class="map-wrap">
