--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <p class="title">⚽ Calcio al parco (tranquillo)</p>
         <p class="meta">19:00 • Parco Sempione • ci si trova e si gioca</p>
         <p class="meta"><span class="count">3</span> persone ci sono</p>
+        <p class="meta distance" data-distance>📍 —</p>
 
         <div class="tags">
           <span class="tag">🟢 Volti nuovi benvenuti</span>
@@ -113,6 +114,7 @@
         <p class="title">♟️ Scacchi al bar</p>
         <p class="meta">18:30 • Zona Isola • principianti ok</p>
         <p class="meta"><span class="count">2</span> persone ci sono</p>
+        <p class="meta distance" data-distance>📍 —</p>
 
         <div class="tags">
           <span class="tag">🟢 Volti nuovi benvenuti </span>
@@ -132,6 +134,7 @@
         <p class="title">🏃 Corsa easy + due chiacchiere</p>
         <p class="meta">20:00 • Darsena • 5–6 km tranquilli</p>
         <p class="meta"><span class="count">5</span> persone ci sono</p>
+        <p class="meta distance" data-distance>📍 —</p>
 
         <div class="tags">
           <span class="tag">🟢 Volti nuovi Benvenuti </span>
