--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="it">
 <head>
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stasera Milano</title>
   <meta name="description" content="Cosa succede vicino a te stasera? Piani semplici, economici, senza inviti. Volti nuovi benvenuti ." />
-
+  
+  <link rel="icon" href="data:,">
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
 
